--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-<canvas id="scene">It should be a very cool 3D animation here, but your dinausor does not support canvas tag. <br/>
+<canvas id="scene">
+    It should be a very cool 3D animation here, but your dinosaur does not support canvas tag. <br/>
     It's time to come back to the present days... :(
 </canvas>
 
