--- a/index.html
+++ b/index.html
@@ -18,17 +18,93 @@
 
 <script language="JavaScript">
 
-    let canvas = document.getElementById("scene");
+	let canvas = document.getElementById("scene");
 
-    let gl = canvas.getContext("webgl2");
-    if (!gl) {
-        canvas.style.display = "none";
-        document.getElementById("noContextLayer").style.display = "block";
-    }
+	let gl = canvas.getContext("webgl2");
+	if (!gl) {
+		canvas.style.display = "none";
+		document.getElementById("noContextLayer").style.display = "block";
+	}
+
+	let vertexShaderSource = document.getElementById("vertex-shader").text;
+	let fragmentShaderSource = document.getElementById("fragment-shader").text;
+
+	let vertexShader = createShader(gl, gl.VERTEX_SHADER, vertexShaderSource);
+	let fragmentShader = createShader(gl, gl.FRAGMENT_SHADER, fragmentShaderSource);
+	let program = createProgram(gl, vertexShader, fragmentShader);
+
+
+	/**
+	 * Load a "shader" script into a shader object (WebGLShader)
+	 * @param gl {WebGL2RenderingContext}
+	 * @param type {number} gl.VERTEX_SHADER or gl.FRAGMENT_SHADER
+	 * @param source {String} source code for the shader
+	 * @returns {WebGLShader}
+	 */
+	function createShader(gl, type, source) {
+		let shader = gl.createShader(type);
+		gl.shaderSource(shader, source);
+		gl.compileShader(shader);
+
+		let success = gl.getShaderParameter(shader, gl.COMPILE_STATUS);
+		if (success) {
+			return shader;
+		}
+
+		console.log(gl.getShaderInfoLog(shader));
+		gl.deleteShader(shader);
+	}
+
+	/**
+	 * Link both Vertex and Fragment shaders into a "Program" (WebGLProgram)
+	 * @param gl {WebGL2RenderingContext}
+	 * @param vertexShader {WebGLShader}
+	 * @param fragmentShader {WebGLShader}
+	 * @returns {WebGLProgram}
+	 */
+	function createProgram(gl, vertexShader, fragmentShader) {
+		let program = gl.createProgram();
+		gl.attachShader(program, vertexShader);
+		gl.attachShader(program, fragmentShader);
+		gl.linkProgram(program);
+
+		let success = gl.getProgramParameter(program, gl.LINK_STATUS);
+		if (success) {
+			return program;
+		}
+
+		console.log(gl.getProgramInfoLog(program));
+		gl.deleteProgram(program);
+	}
 
 
 </script>
 
+
+<script id="vertex-shader" type="not-javascript">
+#version 300 es
+
+// an attribute is an input (in) to a vertex shader.
+in vec4 a_position;
+
+void main() {
+
+  gl_Position = a_position;
+}
+</script>
+
+<script id="fragment-shader" type="not-javascript">
+#version 300 es
+
+precision mediump float;
+
+// output for the fragment shader
+out vec4 outColor;
+
+void main() {
+  outColor = vec4(0.699, 0.089, 0.2, 1);
+}
+</script>
 
 </body>
 </html>
