--- a/index.html
+++ b/index.html
@@ -20,18 +20,29 @@
 <script id="vshader-simple" type="x-shader/x-vertex">#version 300 es
 
 in vec4 aVertexPosition;
+in vec3 aVertexNormal;
 in vec2 aTextureCoord;
 
+uniform mat4 uNormalMatrix;
 uniform mat4 uModelViewMatrix;
 uniform mat4 uProjectionMatrix;
 
 out vec2 vTextureCoord;
+out vec3 vLighting;
 
 void main(void) {
   gl_Position = uProjectionMatrix * uModelViewMatrix * aVertexPosition;
   vTextureCoord = aTextureCoord;
-}
 
+  highp vec3 ambientLight = vec3(0.4, 0.4, 0.4);
+  highp vec3 directionalLightColor = vec3(1, 1, 1);
+  highp vec3 directionalVector = normalize(vec3(0.85, 0.8, 0.75));
+  highp vec4 transformedNormal = uNormalMatrix * vec4(aVertexNormal, 1.0);
+  highp float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
+
+  vLighting = (ambientLight + (directionalLightColor * directional));
+
+}
 
 </script>
 
@@ -39,13 +50,17 @@ void main(void) {
 precision mediump float;
 
 in vec2 vTextureCoord;
+in vec3 vLighting;
 
 uniform sampler2D uSampler;
 
 out vec4 outColor;
 
 void main(void) {
-    outColor = texture(uSampler, vTextureCoord);
+    vec4 texelColor = texture(uSampler, vTextureCoord);
+
+
+    outColor = vec4(texelColor.rgb * vLighting, texelColor.a);
 }
 
 </script>
