--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ void main(void) {
 </script>
 
 <script src="gl-matrix.js"></script>
+<!--script src="objLoader.js"></script-->
+<script src="webgl-obj-loader.js"></script>
 <script src="zenibar.js"></script>
 
 </body>
