--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
 in vec4 aVertexPosition;
 in vec3 aVertexNormal;
 in vec2 aTextureCoord;
+in vec4 aVertexColor;
 
 uniform mat4 uNormalMatrix;
 uniform mat4 uModelViewMatrix;
 uniform mat4 uProjectionMatrix;
 
 out vec2 vTextureCoord;
+out vec4 vVertexColor;
 out vec3 vLighting;
 
 void main(void) {
   gl_Position = uProjectionMatrix * uModelViewMatrix * aVertexPosition;
   vTextureCoord = aTextureCoord;
+  vVertexColor = aVertexColor;
 
   highp vec3 ambientLight = vec3(0.4, 0.4, 0.4);
   highp vec3 directionalLightColor = vec3(1, 1, 1);
-  highp vec3 directionalVector = normalize(vec3(0.85, 0.8, 0.75));
+  highp vec3 directionalVector = normalize(vec3(20, 50, 0));
   highp vec4 transformedNormal = uNormalMatrix * vec4(aVertexNormal, 1.0);
   highp float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
 
@@ -50,6 +53,7 @@ void main(void) {
 precision mediump float;
 
 in vec2 vTextureCoord;
+in vec4 vVertexColor;
 in vec3 vLighting;
 
 uniform sampler2D uSampler;
@@ -57,7 +61,7 @@ uniform sampler2D uSampler;
 out vec4 outColor;
 
 void main(void) {
-    vec4 texelColor = texture(uSampler, vTextureCoord);
+    vec4 texelColor = vVertexColor; //texture(uSampler, vTextureCoord);
 
 
     outColor = vec4(texelColor.rgb * vLighting, texelColor.a);
