[Add] true phong shader

--- a/index.html
+++ b/index.html
@@ -22,6 +22,99 @@
 in vec4 aVertexPosition;
 in vec3 aVertexNormal;
 in vec2 aTextureCoord;
+
+uniform mat4 uNormalMatrix;
+uniform mat4 uModelViewMatrix;
+uniform mat4 uProjectionMatrix;
+
+out vec3 vVertPos;
+out vec2 vTextureCoord;
+out vec3 vNormalInterp;
+
+void main(void) {
+    vec4 vertPos4 = uModelViewMatrix * aVertexPosition;
+    vNormalInterp = vec3(uNormalMatrix * vec4(aVertexNormal, 0.0));
+
+    vVertPos = vec3(vertPos4) / vertPos4.w;
+    vTextureCoord = aTextureCoord;
+
+    gl_Position = uProjectionMatrix * vertPos4;
+}
+
+
+</script>
+
+<script id="phong-fshader" type="x-shader/x-fragment">#version 300 es
+precision mediump float;
+
+in vec2 vTextureCoord;
+in vec3 vNormalInterp;
+in vec3 vVertPos;
+
+uniform bool uUseTexture;
+uniform sampler2D uSampler;
+
+// Material
+uniform float uKa;   // Ambient reflection coefficient
+uniform float uKd;   // Diffuse reflection coefficient
+uniform float uKs;   // Specular reflection coefficient
+uniform float uShininess;
+uniform vec3 uAmbientColor;
+uniform vec3 uDiffuseColor;
+uniform vec3 uSpecularColor;
+
+// Light
+uniform bool uUseLight;
+uniform vec3 uLightPos;
+uniform vec3 uLightColor;
+
+out vec4 outColor;
+
+void main(void) {
+    /*vec4 texelColor;
+     if (uUseTexture == true) {
+        texelColor = texture(uSampler, vTextureCoord);
+     }
+     else {
+        texelColor = vVertexColor;
+     }
+
+    outColor = vec4(texelColor.rgb * vLighting, texelColor.a);
+    */
+
+    //todo : utiliser useLight
+    //todo : utiliser uLightColor
+    //todo : add alpha
+
+   /* vec3 N = normalize(vNormalInterp);
+    vec3 L = normalize(uLightPos - vVertPos);
+
+    // Lambert's cosine law
+    float lambertian = max(dot(N, L), 0.0);
+    float specular = 0.0;
+    if (lambertian > 0.0) {
+        vec3 R = reflect(-L, N);        // Reflected light vector
+        vec3 V = normalize(-vVertPos);  // Vector to viewer
+        // Compute the specular term
+        float specAngle = max(dot(R, V), 0.0);
+        specular = pow(specAngle, uShininess);
+    }
+
+    outColor = vec4(uKa * uAmbientColor +
+                    uKd * lambertian * uDiffuseColor +
+                    uKs * specular * uSpecularColor, 1.0);*/
+
+    outColor = vec4(uAmbientColor, 1);
+    //outColor = vec4(1, 1, 1, 1);
+}
+
+</script>
+
+<script id="basic-vshader" type="x-shader/x-vertex">#version 300 es
+
+in vec4 aVertexPosition;
+in vec3 aVertexNormal;
+in vec2 aTextureCoord;
 in vec4 aVertexColor;
 
 uniform mat4 uNormalMatrix;
@@ -52,9 +145,12 @@ void main(void) {
   }
 }
 
+
+
+
 </script>
 
-<script id="phong-fshader" type="x-shader/x-fragment">#version 300 es
+<script id="basic-fshader" type="x-shader/x-fragment">#version 300 es
 precision mediump float;
 
 in vec2 vTextureCoord;
@@ -77,6 +173,9 @@ void main(void) {
 
     outColor = vec4(texelColor.rgb * vLighting, texelColor.a);
 }
+
+
+
 
 </script>
 
