--- a/index.html
+++ b/index.html
@@ -65,20 +65,6 @@ in vec2 vTextureCoord;
 
 void main()
 {
-    vec3 N = normalize(normalInterp);
-    vec3 L = normalize(uLightPos - vertPos);
-
-    // Lambert's cosine law
-    float lambertian = max(dot(N, L), 0.0);
-    float specular = 0.0;
-    if(lambertian > 0.0) {
-        vec3 R = reflect(-L, N);      // Reflected light vector
-        vec3 V = normalize(-vertPos); // Vector to viewer
-        // Compute the specular term
-        float specAngle = max(dot(R, V), 0.0);
-        specular = pow(specAngle, uShininess);
-    }
-
     vec3 texelColor;
     if (uUseTexture == true) {
         texelColor = vec3(texture(uSampler, vTextureCoord));
@@ -87,9 +73,28 @@ void main()
         texelColor = uDiffuseColor;
     }
 
-    outColor = vec4(uKa * uAmbientColor +
-                    uKd * lambertian * texelColor +
-                    uKs * specular * uSpecularColor, 1.0);
+    if (uUseLight) {
+        vec3 N = normalize(normalInterp);
+        vec3 L = normalize(uLightPos - vertPos);
+
+        // Lambert's cosine law
+        float lambertian = max(dot(N, L), 0.0);
+        float specular = 0.0;
+        if(lambertian > 0.0) {
+            vec3 R = reflect(-L, N);      // Reflected light vector
+            vec3 V = normalize(-vertPos); // Vector to viewer
+            // Compute the specular term
+            float specAngle = max(dot(R, V), 0.0);
+            specular = pow(specAngle, uShininess);
+        }
+
+        outColor = vec4(uKa * uAmbientColor +
+                        uKd * lambertian * texelColor +
+                        uKs * specular * uSpecularColor, 1.0);
+    }
+    else {
+        outColor = vec4(texelColor, 1.0);
+    }
 }
 
 </script>
