--- a/index.html
+++ b/index.html
@@ -162,15 +162,6 @@ void main()
 
         // Lambert's cosine law
         float lambertian = max(dot(N, L), 0.0);
-        float specular = 0.0;
-        vec3 V = normalize(-vertPos); // Vector to viewer
-        if(lambertian > 0.0) {
-            vec3 R = reflect(-L, N);      // Reflected light vector
-            // Compute the specular term
-            float specAngle = max(dot(R, V), 0.0);
-            specular = pow(specAngle, uShininess);
-        }
-
         vec4 color;
         float fraction = 1.0;
 
@@ -187,9 +178,7 @@ void main()
             color = vec4(vec3(0.1), 1.0);
         }
 
-        outColor = color * vec4(uKa * uAmbientColor +
-                                uKd * lambertian * texelColor /*+
-                                uKs * specular * uSpecularColor*/, 1.0);
+        outColor = color * vec4(uKa * uAmbientColor + uKd * lambertian * texelColor, 1.0);
 
     }
     else {
