--- a/index.html
+++ b/index.html
@@ -110,12 +110,16 @@ uniform mat4 uNormalMatrix, uModelViewMatrix, uProjectionMatrix;
 out vec3 normalInterp;
 out vec3 vertPos;
 out vec2 vTextureCoord;
+out vec4 eye;
 
 void main()
 {
     vec4 vertPos4 = uModelViewMatrix * vec4(aVertexPosition, 1.0);
     vertPos = vec3(vertPos4) / vertPos4.w;
     normalInterp = vec3(uNormalMatrix * vec4(aVertexNormal, 0.0));
+
+    mat4 eyeMatrix = inverse(uModelViewMatrix);
+    eye = normalize(eyeMatrix * vec4(aVertexPosition, 1.0));
 
     vTextureCoord = aTextureCoord;
 
@@ -144,6 +148,7 @@ uniform bool uUseLight;
 in vec3 normalInterp;
 in vec3 vertPos;
 in vec2 vTextureCoord;
+in vec4 eye;
 
 void main()
 {
@@ -171,14 +176,16 @@ void main()
         else if (lambertian > pow(0.5, fraction)) {
             color = vec4(vec3(0.7), 1.0);
         }
-        else if (lambertian > pow(0.05, fraction)) {
+        /*else if (lambertian > pow(0.05, fraction)) {
             color = vec4(vec3(0.35), 1.0);
-        }
+        }*/
         else {
-            color = vec4(vec3(0.1), 1.0);
+            color = vec4(vec3(0.5), 1.0);
         }
 
-        outColor = color * vec4(uKa * uAmbientColor + uKd * lambertian * texelColor, 1.0);
+        float edgeDetection = (dot(vec3(eye), N) > 0.15) ? 1.0 : 0.0;
+
+        outColor = edgeDetection * color * vec4(uKa * uAmbientColor + uKd * lambertian * texelColor, 1.0);
 
     }
     else {
