[Add] use Layout location instead of "getAttribLocation" function and initialize the 1st version of camera

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <script id="phong-vshader" type="x-shader/x-vertex">#version 300 es
 
-in vec3 aVertexPosition;
-in vec3 aVertexNormal;
-in vec2 aTextureCoord;
+layout(location = 0) in vec3 aVertexPosition;
+layout(location = 1) in vec3 aVertexNormal;
+layout(location = 2) in vec2 aTextureCoord;
 
 uniform mat4 uNormalMatrix, uModelViewMatrix, uProjectionMatrix;
 
@@ -101,9 +101,9 @@ void main()
 
 <script id="toon-vshader" type="x-shader/x-vertex">#version 300 es
 
-in vec3 aVertexPosition;
-in vec3 aVertexNormal;
-in vec2 aTextureCoord;
+layout(location = 0) in vec3 aVertexPosition;
+layout(location = 1) in vec3 aVertexNormal;
+layout(location = 2) in vec2 aTextureCoord;
 
 uniform mat4 uNormalMatrix, uModelViewMatrix, uProjectionMatrix;
 
