--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout(location = 0) in vec3 aVertexPosition;
 layout(location = 1) in vec3 aVertexNormal;
 layout(location = 2) in vec2 aTextureCoord;
 
-uniform mat4 uNormalMatrix, uModelViewMatrix, uProjectionMatrix;
+uniform mat4 uNormalMatrix, uModelViewMatrix, uProjectionMatrix, uWorldMatrix;
 
 out vec3 normalInterp;
 out vec3 vertPos;
@@ -106,6 +106,7 @@ layout(location = 1) in vec3 aVertexNormal;
 layout(location = 2) in vec2 aTextureCoord;
 
 uniform mat4 uNormalMatrix, uModelViewMatrix, uProjectionMatrix;
+uniform vec3 uCameraPosition;
 
 out vec3 normalInterp;
 out vec3 vertPos;
@@ -191,6 +192,77 @@ void main()
     else {
         outColor = vec4(texelColor, 1.0);
     }
+}
+
+</script>
+
+<script id="toon2-vshader" type="x-shader/x-vertex">#version 300 es
+
+layout(location = 0) in vec3 aVertexPosition;
+layout(location = 1) in vec3 aVertexNormal;
+layout(location = 2) in vec2 aTextureCoord;
+
+uniform mat4 uNormalMatrix, uModelViewMatrix, uProjectionMatrix, uCameraMatrix;
+
+//send them to fragment shader
+out vec3 world_pos;
+out vec3 world_normal;
+
+void main()
+{
+    //convert in world coords
+    world_pos = mat3(uModelViewMatrix) * aVertexPosition;//careful here
+    world_normal = normalize(mat3(uModelViewMatrix) * aVertexNormal);
+    gl_Position = uProjectionMatrix * uModelViewMatrix * vec4(aVertexPosition, 1);
+}
+
+</script>
+
+<script id="toon2-fshader" type="x-shader/x-fragment">#version 300 es
+precision mediump float;
+out vec4 out_color;
+
+uniform vec3 uLightPos;
+uniform vec3 uCameraPosition;
+uniform float uShininess;
+uniform float uKd;
+uniform float uKs;
+uniform vec3 uAmbientColor;
+uniform vec3 uDiffuseColor;
+
+in vec3 world_pos;
+in vec3 world_normal;
+
+//number of levels
+//for diffuse color
+const float levels = 5.0;
+const float scaleFactor = 1.0 / levels;
+
+void main()
+{
+    vec3 L = normalize(uLightPos - world_pos);
+    vec3 V = normalize(uCameraPosition - world_pos);
+
+    float diffuse = max(0.0, dot(L, world_normal));
+    vec3 diffuseColor = uDiffuseColor * uKd * floor(diffuse * levels) * scaleFactor;
+
+    vec3 H = normalize(L + V);
+
+    float specular = 0.0;
+    if (dot(L, world_normal) > 0.0)
+    {
+       specular = uKs * pow( max(0.0, dot( H, world_normal)), uShininess);
+    }
+
+    //limit specular
+    float specMask = (pow(dot(H, world_normal), uShininess) > 0.4) ? 1.0 : 0.0;
+
+    float edgeDetection = (dot(V, world_normal) > 0.3) ? 1.0 : 0.0;
+
+    vec3 color = edgeDetection * (uAmbientColor + diffuseColor + specular * specMask);
+    //vec3 color = vec3(1.0, 1.0, 1.0);
+
+    out_color = vec4(color, 1.0);
 }
 
 </script>
