--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<canvas id="scene" width="800px" height="600px" style="background: black">
+<canvas id="scene" width="1024px" height="720px" style="background: black">
     It should be a very cool 3D animation here, but your dinosaur does not support canvas tag. <br/>
     It's time to come back to the present days... :(
 </canvas>
@@ -15,6 +15,39 @@
     <h2>Ouch, your dinosaur does not support WebGL2 yet. </h2>
     <h3>It's time to come back to the present days...</h3>
 </div>
+
+<script id="skybox-vshader" type="x-shader/x-vertex">#version 300 es
+layout(location = 0) in vec3 aVertexPosition;
+
+uniform mat4 uViewMatrix, uProjectionMatrix, uWorldMatrix;
+
+out vec4 vVertexPosition;
+
+void main() {
+  vVertexPosition = vec4(aVertexPosition, 1.0);
+
+  gl_Position = vec4(aVertexPosition, 1.0);
+  //gl_Position = uProjectionMatrix * uViewMatrix * uWorldMatrix * vec4(aVertexPosition, 1.0);
+}
+</script>
+
+<script id="skybox-fshader" type="x-shader/x-fragment">#version 300 es
+precision mediump float;
+
+in vec4 vVertexPosition;
+
+uniform samplerCube uSampler;
+uniform mat4 uViewDirectionProjectionInverse;
+
+out vec4 outColor;
+
+void main() {
+  vec4 t = uViewDirectionProjectionInverse * vVertexPosition;
+  outColor = texture(uSampler, normalize(t.xyz / t.w));
+}
+
+</script>
+
 
 <script id="reflect-vshader" type="x-shader/x-vertex">#version 300 es
 
@@ -48,6 +81,7 @@ in vec3 vWorldNormal;
 uniform samplerCube uSampler;
 // The position of the camera
 uniform vec3 uCameraPosition;
+uniform float uAlpha;
 
 out vec4 outColor;
 
@@ -57,6 +91,74 @@ void main() {
   vec3 direction = reflect(eyeToSurfaceDir, worldNormal);
 
   outColor = texture(uSampler, direction);
+  outColor.a = uAlpha;
+}
+
+</script>
+
+<script id="refract-vshader" type="x-shader/x-vertex">#version 300 es
+
+layout(location = 0) in vec3 aVertexPosition;
+layout(location = 1) in vec3 aVertexNormal;
+
+uniform mat4 uViewMatrix, uProjectionMatrix, uWorldMatrix, uNormalMatrix;
+uniform vec3 uCameraPosition;
+
+// Indices of refraction
+const float Air = 1.0;
+const float Glass = 1.51714;
+
+// Air to glass ratio of the indices of refraction (Eta)
+const float Eta = Air / Glass;
+
+// see http://en.wikipedia.org/wiki/Refractive_index Reflectivity
+const float R0 = ((Air - Glass) * (Air - Glass)) / ((Air + Glass) * (Air + Glass));
+
+out vec3 vReflection;
+out vec3 vRefraction;
+out float vFresnel;
+
+void main() {
+  // Multiply the position by the matrix.
+  gl_Position = uProjectionMatrix * uViewMatrix * uWorldMatrix * vec4(aVertexPosition, 1.0);
+
+  vec4 vertex = uViewMatrix * vec4(aVertexPosition, 1.0);
+
+	vec3 incident = normalize(vec3(vertex) - uCameraPosition);
+
+	// Assume incoming normal is normalized.
+	vec3 normal = vec3(uNormalMatrix * vec4(aVertexNormal, 1.0));
+
+	vRefraction = refract(incident, normal, Eta);
+	vReflection = reflect(incident, normal);
+
+	// see http://en.wikipedia.org/wiki/Schlick%27s_approximation
+	vFresnel = R0 + (1.0 - R0) * pow((1.0 - dot(-incident, normal)), 5.0);
+
+	gl_Position = uProjectionMatrix * vertex;
+}
+
+</script>
+
+<script id="refract-fshader" type="x-shader/x-fragment">#version 300 es
+precision highp float;
+
+uniform samplerCube uSampler;
+uniform float uAlpha;
+
+in vec3 vRefraction;
+in vec3 vReflection;
+in float vFresnel;
+
+out vec4 outColor;
+
+void main(void)
+{
+	vec4 refractionColor = texture(uSampler, normalize(vRefraction));
+	vec4 reflectionColor = texture(uSampler, normalize(vReflection));
+
+	outColor = mix(refractionColor, reflectionColor, vFresnel);
+	outColor.a = uAlpha;
 }
 
 </script>
@@ -99,6 +201,7 @@ uniform float uKs;
 uniform vec3 uAmbientColor;
 uniform vec3 uDiffuseColor;
 uniform vec3 uSpecularColor;
+uniform float uAlpha;
 
 uniform sampler2D uSampler;
 uniform bool uUseTexture;
@@ -135,10 +238,10 @@ void main()
 
         outColor = vec4(uKa * uAmbientColor +
                         uKd * lambertian * texelColor +
-                        uKs * specular * uSpecularColor, 1.0);
+                        uKs * specular * uSpecularColor, uAlpha);
     }
     else {
-        outColor = vec4(texelColor, 1.0);
+        outColor = vec4(texelColor, uAlpha);
     }
 }
 
@@ -181,13 +284,14 @@ uniform float uKd;
 uniform float uKs;
 uniform vec3 uAmbientColor;
 uniform vec3 uDiffuseColor;
+uniform float uAlpha;
 
 in vec3 vWorldPosition;
 in vec3 vWorldNormal;
 
 //number of levels
 //for diffuse color
-const float levels = 5.0;
+const float levels = 3.0;
 const float scaleFactor = 1.0 / levels;
 
 void main()
@@ -214,75 +318,41 @@ void main()
     vec3 color = edgeDetection * (uAmbientColor + diffuseColor + specular * specMask);
     //vec3 color = vec3(1.0, 1.0, 1.0);
 
-    outColor = vec4(color, 1.0);
+    outColor = vec4(color, uAlpha);
 }
 
 </script>
 
-<script id="basic-vshader" type="x-shader/x-vertex">#version 300 es
+<script id="background-vshader" type="x-shader/x-vertex">#version 300 es
 
-in vec4 aVertexPosition;
-in vec3 aVertexNormal;
-in vec2 aTextureCoord;
+layout(location = 0) in vec3 aVertexPosition;
+layout(location = 2) in vec2 aTextureCoord;
 
 uniform mat4 uNormalMatrix;
 uniform mat4 uViewMatrix;
 uniform mat4 uProjectionMatrix;
 
-uniform bool uUseLight;
-uniform vec3 uAmbientColor;
-uniform vec3 uLightDirection;
-uniform vec3 uLightColor;
-
 out vec2 vTextureCoord;
-out vec3 vLighting;
 
 void main(void) {
-  gl_Position = uProjectionMatrix * uViewMatrix * aVertexPosition;
+  gl_Position = uProjectionMatrix  * vec4(aVertexPosition, 1.0);
   vTextureCoord = aTextureCoord;
-
-    if (!uUseLight) {
-        vLighting = vec3(1.0, 1.0, 1.0);
-    }
-    else {
-        highp vec4 transformedNormal = uNormalMatrix * vec4(aVertexNormal, 1.0);
-        highp float directional = max(dot(transformedNormal.xyz, uLightDirection), 0.0);
-
-        vLighting = uAmbientColor + (uLightColor * directional);
-  }
 }
 
 </script>
 
-<script id="basic-fshader" type="x-shader/x-fragment">#version 300 es
+<script id="background-fshader" type="x-shader/x-fragment">#version 300 es
 precision mediump float;
 
 in vec2 vTextureCoord;
-in vec3 vLighting;
 
 uniform sampler2D uSampler;
-uniform bool uUseTexture;
 
 out vec4 outColor;
 
 void main(void) {
-    vec4 texelColor;
-     if (uUseTexture == true) {
-        texelColor = texture(uSampler, vTextureCoord);
-     }
-     else {
-        texelColor = vec4(0.9, 1.0, 0.8, 1.0);
-     }
-
-    outColor = vec4(texelColor.rgb * vLighting, texelColor.a);
+    outColor = texture(uSampler, vTextureCoord);
 }
-
-
-
-
-
-
-
 
 </script>
 
